# text-to-mermaid

./: CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt  safety-policy.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: Dockerfile  README.md
model/: train_T5.py
scripts/: train.sh
tests/test_example/: test_hello.py
text_to_mermaid/: __init__.py  __main__.py
