# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "text-to-mermaid"
version = "0.1.0"
description = "Fine-tuned model for generating mermaid subgraph from text."
readme = "README.md"
authors = ["text-to-mermaid <benjamin.h.glidden@gmail.com>"]
license = "MIT"
repository = "https://github.com/bglid/text-to-mermaid"
homepage = "https://github.com/bglid/text-to-mermaid"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"text-to-mermaid" = "text_to_mermaid.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"

# typer = {extras = ["all"], version = "^0.4.0"}
rich = "^13.9.4"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = {version = "^21.10b0", allow-prereleases = true}
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "1.14.0"
mypy-extensions = "^1.0.0"
pre-commit = "^4.0.1"
pydocstyle = "^6.1.1"
pylint = "^3.3.2"
pytest = "^8.3.4"
pyupgrade = "^3.19.1"
coverage = "^7.6.9"
coverage-badge = "^1.1.0"
pytest-html = "^3.1.1"
pytest-cov = "^6.0.0"
click = "8.0.2"
py = " 1.11.0"
safety = ">=2.2.0"
typer = "0.15.1"
torch = "2.5.1"
transformers = "^4.24.0"
tqdm = "4.67.1"
accelerate = "1.3.0"
wandb = "0.19.1"
numpy = "^1.21.0"
evaluate = "0.4.3"
datasets = "^2.19.0"
nltk = "3.9.1"
absl-py = "2.1.0"
rouge-score = "0.1.2"


[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "text-to-mermaid"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
